[package]
authors = ["fluzz"]
edition = "2018"
name    = "chat-broken"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest               = { version = "0.10.6", features = ["json"] }
serde_json            = "1.0.57"
thiserror             = "1.0.20"
tokio                 = { version = "0.2.21", features = ["macros"] }
unicode-normalization = "0.1.13"

lcu = { path = "../lcu" }
